@@ -5,13 +5,17 @@ import teamblue.annotations.Column;
 import teamblue.annotations.Entity;
 import teamblue.annotations.Id;
 import teamblue.annotations.Table;
+import teamblue.model.Book;
 
 import javax.sql.DataSource;
 import java.io.Serializable;
+import java.lang.annotation.Annotation;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
 import java.sql.*;
+import java.text.SimpleDateFormat;
 import java.time.LocalDate;
+import java.util.Date;
 import java.util.*;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -31,9 +35,8 @@ public class H2ORManager extends ORManager {
     }
 
     @Override
-    void register(Class... entityClasses) throws SQLException {
-        for (Class<?> entityClass : entityClasses) {
-
+    void register(Class... entityClasses) {
+        for (Class<? extends Class> entityClass : entityClasses) {
 
             if (entityClass.isAnnotationPresent(Entity.class)) {
                 registerClass(entityClass);
@@ -44,9 +47,15 @@ public class H2ORManager extends ORManager {
         }
     }
 
-    void registerClass(Class<?> entityClass) throws SQLException {
+    void registerClass(Class<?> entityClass) {
+        String tableName = "";
 
-        String tableName = getTableName(entityClass);
+        if (entityClass.isAnnotationPresent(Table.class)) {
+            tableName = entityClass.getDeclaredAnnotation(Table.class)
+                    .value();
+        } else {
+            tableName = entityClass.getSimpleName();
+        }
 
 
         List<Field> primaryKeyFields = new ArrayList<>();
@@ -59,13 +68,7 @@ public class H2ORManager extends ORManager {
         }
 
 
-        String dropStatementQuery = DROP + tableName;
-        PreparedStatement dropPriorTableStmt = getConnectionWithDB().prepareStatement(dropStatementQuery);
-        dropPriorTableStmt.executeUpdate();
-
-
         StringBuilder baseSql = new StringBuilder(CREATE_TABLE_IF_NOT_EXISTS + tableName + LEFT_PARENTHESIS);
-
 
         for (int i = 0; i < primaryKeyFields.size(); i++) {
             getCastedTypeToH2(primaryKeyFields, i, baseSql);
@@ -76,15 +79,21 @@ public class H2ORManager extends ORManager {
         }
         baseSql.append(RIGHT_PARENTHESIS);
 
-        PreparedStatement addTableStatement = getConnectionWithDB().prepareStatement(String.valueOf(baseSql));
-        addTableStatement.executeUpdate();
+        try {
+            PreparedStatement addTableStatement = getConnectionWithDB().prepareStatement(String.valueOf(baseSql));
+            addTableStatement.executeUpdate();
 
-        List<Field> columnFields = Arrays.stream(declaredFields)
-                .filter(f -> f.isAnnotationPresent(Column.class))
-                .toList();
+            List<Field> columnFields = Arrays.stream(declaredFields)
+                    .filter(f -> f.isAnnotationPresent(Column.class))
+                    .toList();
 
-        columnRename(tableName, columnFields);
+            columnRename(tableName, columnFields);
+        } catch (SQLException e) {
+            log.error("Error of {} occured during creating table", e.getMessage());
+        }
 
+        MetaInfo.cache.put(entityClass, new HashSet<>());
+        MetaInfo.setIsCacheUpToDate(false);
         log.info("Created table of name {}", entityClass.getSimpleName());
     }
 
@@ -92,8 +101,10 @@ public class H2ORManager extends ORManager {
     void columnRename(String tableName, List<Field> columnFields) throws SQLException {
         for (Field field : columnFields) {
             getConnectionWithDB().prepareStatement(ALTER_TABLE + tableName
-                            + ALTER_COLUMN + field.getName().toUpperCase() + RENAME_TO +
-                            field.getAnnotation(Column.class).value())
+                            + ALTER_COLUMN + field.getName()
+                            .toUpperCase() + RENAME_TO +
+                            field.getAnnotation(Column.class)
+                                    .value())
                     .executeUpdate();
         }
     }
@@ -102,7 +113,7 @@ public class H2ORManager extends ORManager {
     void getCastedTypeToH2(List<Field> fields, int i, StringBuilder baseSql) {
 /**
  primary keys need auto_increment and primary key  syntaxes
- **/
+ */
 
         if (java.util.UUID.class == fields.get(i).getType() && (fields.get(i).isAnnotationPresent(Id.class))) {
             baseSql.append(fields.get(i).getName() + UUID + AUTO_INCREMENT + PRIMARY_KEY);
@@ -136,100 +147,128 @@ public class H2ORManager extends ORManager {
     }
 
     @Override
-    Object save(Object object) {
-        StringBuilder saveSql = new StringBuilder();
-        String oClassName = object.getClass()
-                .getName();
-        Class<?> clazz = null;
+    public Object save(Object object) {
+        String oClassName = object.getClass().getName();
+        Class<?> clazz;
         try {
             clazz = Class.forName(oClassName);
         } catch (ClassNotFoundException e) {
             log.debug("Class was not found!");
+            return object;
         }
+        saveObject(object, clazz);
+        MetaInfo.setIsCacheUpToDate(false);
+        return object;
+    }
 
-        if (clazz.isAnnotationPresent(Entity.class)) {
-            Field[] declaredFields = clazz.getDeclaredFields();
+    protected void saveObject(Object object, Class<?> clazz) {
+        if (!clazz.isAnnotationPresent(Entity.class)) {
+            log.info("Class missing @Entity annotation!");
+        } else {
+            List<Field> declaredFields = Arrays.stream(clazz.getDeclaredFields()).toList();
 
-            if (Arrays.stream(declaredFields).findAny().isEmpty()) {
-                log.debug("No fields present to save to database.");
-                throw new RuntimeException("No fields present to save to database");
+            if (declaredFields.stream().findAny().isEmpty()) {
+                log.info("No fields present to save to database.");
+                return;
             }
 
-            List<String> listOfFieldsName = getFieldsNameWithoutId(declaredFields);
-            List<String> listOfFieldValues = getFieldValuesWithoutId(object, declaredFields);
-
+            List<String> listOfFieldsName = getFieldsName(declaredFields);
+            List<String> listOfFieldValues = getFieldValuesForSaving(object, declaredFields);
             String sqlFieldName = listOfFieldsName.stream()
                     .collect(Collectors.joining(", "
                             , LEFT_PARENTHESIS, RIGHT_PARENTHESIS));
-            String sqlFieldValues = listOfFieldValues.stream()
-                    .map(field -> "'" + field + "'")
-                    .collect(Collectors.joining(", "
-                            , LEFT_PARENTHESIS, RIGHT_PARENTHESIS));
+            String sqlFieldValues = String.join(", ", listOfFieldValues);
+
+            StringBuilder saveSql = new StringBuilder();
             saveSql.append(INSERT_INTO)
                     .append(getTableName(Objects.requireNonNull(clazz)))
                     .append(sqlFieldName)
                     .append(VALUES)
-                    .append(sqlFieldValues);
+                    .append(LEFT_PARENTHESIS)
+                    .append(sqlFieldValues)
+                    .append(RIGHT_PARENTHESIS);
 
-            Long generatedKey = null;
-            generatedKey = runSQLAndGetId(saveSql);
+            Long generatedKey;
+            try {
+                generatedKey = runSQLAndGetId(saveSql);
+            } catch (SQLException e) {
+                log.debug("Unable to get correct generated ID.");
+                log.debug("{}", e.getMessage());
+                return;
+            }
+            setFieldValueWithAnnotation(object, clazz, generatedKey, Id.class);
+            log.info("Object of {} saved successfully with Id: {}", object.getClass()
+                    .getSimpleName(), generatedKey);
 
-            Long finalGeneratedKey = generatedKey;
-            Arrays.stream(declaredFields).filter(field -> field.isAnnotationPresent(Id.class))
-                    .forEach(field -> {
-                        field.setAccessible(true);
-                        try {
-                            field.set(object, finalGeneratedKey);
-                        } catch (IllegalAccessException e) {
-                            log.debug("{}", e.getMessage());
-                            throw new RuntimeException("Unable to set id of the object.");
-                        }
-                    });
         }
-        return object;
     }
 
-    private Long runSQLAndGetId(StringBuilder saveSql) {
+    private static void setFieldValueWithAnnotation(Object object, Class<?> clazz, Long finalGeneratedKey, Class<? extends Annotation> classAnnotation) {
+        Arrays.stream(clazz.getDeclaredFields())
+                .filter(field -> field.isAnnotationPresent(classAnnotation))
+                .forEach(field -> {
+                    field.setAccessible(true);
+                    try {
+                        field.set(object, finalGeneratedKey);
+                    } catch (IllegalAccessException e) {
+                        log.debug("{}", e.getMessage());
+                    }
+                });
+    }
+
+    private Long runSQLAndGetId(StringBuilder saveSql) throws SQLException {
         Long generatedKey = null;
-        try (PreparedStatement ps = getConnectionWithDB().prepareStatement(saveSql.toString()
-                , Statement.RETURN_GENERATED_KEYS)) {
+        try (PreparedStatement ps = getConnectionWithDB().prepareStatement(saveSql.toString(),
+                Statement.RETURN_GENERATED_KEYS)) {
             ps.executeUpdate();
             ResultSet rs = ps.getGeneratedKeys();
             while (rs.next()) {
                 generatedKey = rs.getLong(1);
             }
         } catch (SQLException e) {
-            log.debug("{}", e.getMessage());
-            throw new RuntimeException(e.getMessage());
+            log.debug("Unable to save object to database, some fields might be null. %n {}", e.getSQLState());
+            throw new SQLException("Unable to save object.");
         }
         return generatedKey;
     }
 
-    private List<String> getFieldsNameWithoutId(Field[] declaredFields) {
-        return Arrays.stream(declaredFields)
-                .filter(field -> !field.isAnnotationPresent(Id.class))
+    private List<String> getFieldsName(List<Field> declaredFields) {
+        return declaredFields.stream()
                 .map(field -> {
                     if (field.isAnnotationPresent(Column.class)) {
-                        return field.getAnnotation(Column.class).value();
+                        return field.getAnnotation(Column.class)
+                                .value();
                     } else {
                         return field.getName();
                     }
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    private List<String> getFieldValuesWithoutId(Object object, Field[] declaredFields) {
-        return Arrays.stream(declaredFields)
-                .filter(field -> !field.isAnnotationPresent(Id.class))
+    private List<String> getFieldValuesForSaving(Object object, List<Field> declaredFields) {
+        return declaredFields.stream()
                 .map(field -> {
                     try {
-                        field.setAccessible(true);
-                        return String.valueOf(field.get(object));
+                        if (field.isAnnotationPresent(Id.class)) {
+                            if (field.getType().getSimpleName().equals("Long")) {
+                                return "default";
+                            } else if (field.getType().getSimpleName().equals("String")) {
+                                return String.valueOf(field.get(object));
+                            } else {
+                                return "";
+                            }
+                        } else {
+                            field.setAccessible(true);
+                            return String.valueOf(field.get(object));
+                        }
                     } catch (IllegalAccessException e) {
-                        throw new RuntimeException(e);
+                        log.debug("Unable to access field: {}", field.getName());
+                        return "";
                     }
                 })
-                .collect(Collectors.toList());
+                .map(field -> field.equals("default")
+                        || field.equals("null") ? field : "'" + field + "'")
+                .toList();
     }
 
     private static String getTableName(Class<?> clazz) {
@@ -237,70 +276,205 @@ public class H2ORManager extends ORManager {
                 .value() : clazz.getSimpleName();
     }
 
-
     private List<String> getDeclaredFieldsName(Stream<Field> fieldStream) {
         return null;
     }
 
     @Override
-    void persist(Object o) {
+    void persist(Object object) throws RuntimeException {
+        String oClassName = object.getClass().getName();
+        Class<?> clazz;
+        try {
+            clazz = Class.forName(oClassName);
+        } catch (ClassNotFoundException e) {
+            log.debug("Class was not found!");
+            return;
+        }
+        if (clazz.isAnnotationPresent(Entity.class)) {
+            String result = getStringOfIdIfExist(object, clazz).orElse("");
+            if (result.equals("")) {
+                saveObject(object, clazz);
+                MetaInfo.setIsCacheUpToDate(false);
+            } else {
+                throw new RuntimeException("Class should not have ID!");
+            }
+        } else {
+            log.info("Class missing @Entity annotation!");
+        }
+    }
 
+    private Optional<String> getStringOfIdIfExist(Object object, Class<?> clazz) {
+        return Arrays.stream(clazz.getDeclaredFields())
+                .filter(field -> field.isAnnotationPresent(Id.class))
+                .map(field -> {
+                    field.setAccessible(true);
+                    try {
+                        return field.get(object);
+                    } catch (IllegalAccessException e) {
+                        return "error";
+                    }
+                })
+                .filter(Objects::nonNull)
+                .map(Object::toString)
+                .findAny();
     }
 
     @Override
     <T> Optional<T> findById(Serializable id, Class<T> cls) {
-
-        Optional<T> result = Optional.empty();
-
-        if (!cls.isAnnotationPresent(Entity.class)) {
-            log.error("First register a class");
-            return null;
-        }
-
-        String tableName = getTableName(cls);
-
-        Field fieldId = Arrays.stream(cls.getDeclaredFields())
-                .filter(f -> f.isAnnotationPresent(Id.class))
-                .findFirst().get();
-
-        String fieldName = getFieldName(fieldId);
-
-
-        Constructor<?> constructor = Arrays.stream(cls.getDeclaredConstructors())
-                .findFirst().get();
-
-        try (PreparedStatement ps = getConnectionWithDB().prepareStatement(SELECT + "*" + FROM + tableName + WHERE + fieldName + EQUAL_QUESTION_MARK)) {
-            ps.setInt(1, (int) id);
-            ResultSet resultSet = ps.executeQuery();
-            ResultSetMetaData metaData = resultSet.getMetaData();
-            int columnCount = metaData.getColumnCount();
-            while (resultSet.next()) {
-                for (int i = 1; i < columnCount; i++) {
-
-                }
-
-            }
-            return result;
-        } catch (SQLException e) {
-            throw new RuntimeException(e);
-        }
+        return Optional.empty();
     }
 
-
-    private static <T> String getFieldName(Field field) {
-        String fieldName;
-        if (field.isAnnotationPresent(Column.class)) {
-            fieldName = field.getAnnotation(Column.class).value();
-        } else {
-            fieldName = field.getName();
-        }
-        return fieldName;
-    }
 
     @Override
     <T> List<T> findAll(Class<T> cls) {
-        return null;
+
+        if (MetaInfo.isCacheUpToDate) {
+            List<T> items = new ArrayList<>();
+            items.addAll((Collection<T>) MetaInfo.getCache().get(cls));
+            return items;
+        }
+
+        String tableName = "";
+        if (cls.isAnnotationPresent(Table.class)) {
+            tableName = cls.getAnnotation(Table.class).value();
+        } else {
+            tableName = cls.getSimpleName();
+        }
+
+        String baseSql = SELECT_ALL_FROM + tableName;
+
+        PreparedStatement findAllStmt = null;
+        List<T> foundAll = new ArrayList<>();
+        try {
+            findAllStmt = getConnectionWithDB().prepareStatement(baseSql);
+            ResultSet resultSet = null;
+            resultSet = findAllStmt.executeQuery();
+            int nrOfColumns = resultSet.getMetaData().getColumnCount();
+            Constructor<T> constructor = cls.getDeclaredConstructor();
+            constructor.setAccessible(true);
+
+            MetaInfo metaInfo = new MetaInfo();
+            while (resultSet.next()) {
+                T newObject = constructor.newInstance();
+                MetaInfo metaInfoInstanceObjects = metaInfo.of(cls);
+                for (var fieldInfo : metaInfoInstanceObjects.getFieldInfos()) {
+                    var value = fieldInfo.getRSgetter(resultSet);
+                    var field = fieldInfo.getField();
+                    field.setAccessible(true);
+                    field.set(newObject, value);
+                }
+                foundAll.add(newObject);
+            }
+
+            MetaInfo.establishNewCache((List<Object>) foundAll, cls);
+            log.info("Cached just got updated. Stored objects are {}", MetaInfo.getCache().get(cls));
+            MetaInfo.setIsCacheUpToDate(true);
+
+        } catch (ReflectiveOperationException e) {
+            throw new RuntimeException("Exception of reflecive operation");
+        } catch (SQLException e) {
+            throw new RuntimeException("SQL Exception");
+        }
+
+        return foundAll;
     }
+
+    class MetaInfo {
+        List<FieldInfo> fields = new ArrayList<>();
+        static Map<Class, Set<Object>> cache = new HashMap<>();
+        static boolean isCacheUpToDate = false;
+
+        MetaInfo() {
+        }
+
+        MetaInfo(List<FieldInfo> fields) {
+            this.fields = fields;
+        }
+
+
+        MetaInfo of(Class cls) {
+            Arrays.stream(cls.getDeclaredFields())
+                    .peek(f -> f.setAccessible(true))
+                    .forEach(field -> fields.add(
+                            (new FieldInfo(field.isAnnotationPresent(Column.class) ? field.getAnnotation(Column.class).value() : field.getName(), field, cls))));
+            return new MetaInfo(fields);
+        }
+
+        static Set<Object> newCache = new HashSet<>();
+        static void establishNewCache(List<Object> newlyFoundInDBObjects, Class cls) {
+            Set<Object> metaInfoFromCache = getCache().get(cls);
+            for (var latelyFound : newlyFoundInDBObjects) {
+                if (!metaInfoFromCache.contains(latelyFound)) {
+                    newCache.add(latelyFound);
+                }
+            }
+
+            Set<Object> oldCache = getCache().get(Book.class);
+            Set<Object> wholeCache = Stream.of(oldCache, newCache)
+                    .flatMap(list -> list.stream()).collect(Collectors.toSet());
+            addToCache(cls, wholeCache);
+        }
+
+        static void addToCache(Class cls, Set objects) {
+            objects.stream().forEach(upgradeCacheWithEl -> cache.get(cls).add(upgradeCacheWithEl));
+        }
+
+        static void clearCache() {
+            newCache.clear();
+            cache.values().clear();
+        }
+
+        public static Map<Class, Set<Object>> getCache() {
+            return cache;
+        }
+
+        public static void setCache(Map<Class, Set<Object>> cache) {
+            MetaInfo.cache = cache;
+        }
+
+        public static boolean isIsCacheUpToDate() {
+            return isCacheUpToDate;
+        }
+
+        public static void setIsCacheUpToDate(boolean isCacheUpToDate) {
+            MetaInfo.isCacheUpToDate = isCacheUpToDate;
+        }
+
+        List<FieldInfo> getFieldInfos() {
+            return fields;
+        }
+
+        public static class FieldInfo {
+            String columnName;
+            Field field;
+            Class type;
+
+            public FieldInfo(String columnName, Field field, Class type) {
+                this.columnName = columnName;
+                this.field = field;
+                this.type = type;
+            }
+
+            public Field getField() {
+                return field;
+            }
+
+            public Object getRSgetter(ResultSet rs) {
+                try {
+                    if (rs.getObject(columnName) instanceof Date date) {
+                        SimpleDateFormat formatter = new SimpleDateFormat("yyyy-MM-dd");
+                        String format1 = formatter.format(date);
+                        LocalDate dateFormatted = LocalDate.parse(format1);
+                        return dateFormatted;
+                    }
+                    return rs.getObject(columnName);
+                } catch (SQLException e) {
+                    throw new RuntimeException(e);
+                }
+            }
+        }
+    }
+
 
     @Override
     <T> Iterable<T> findAllAsIterable(Class<T> cls) {
